ちょっと変更

--- a/build.gradle
+++ b/build.gradle
@@ -49,17 +49,17 @@ processResources
     inputs.property "mcversion", project.minecraft.version
 
     // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
+   // from(sourceSets.main.resources.srcDirs) {
+      //  include 'mcmod.info'
 
         // replace version and mcversion
         expand 'version':project.version, 'mcversion':project.minecraft.version
-    }
+   // }
 
     // copy everything else, thats not the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-    }
+  //  from(sourceSets.main.resources.srcDirs) {
+      //  exclude 'mcmod.info'
+  //  }
 }
 [compileJava, compileTestJava].each {
     it.options.encoding = 'UTF-8'
