--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.3"
+version = "1.4"
 group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "messy mod"
 
@@ -44,23 +44,28 @@ dependencies {
 
 processResources
 {
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
+  // this will ensure that this task is redone when the versions change.
+    inputs.property "1.7.10_2.0", project.version
+    inputs.property "1.7.10", project.minecraft.version
 
     // replace stuff in mcmod.info, nothing else
    // from(sourceSets.main.resources.srcDirs) {
-      //  include 'mcmod.info'
+       // include 'mcmod.info'
 
         // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+     //   expand 'version':project.version, 'mcversion':project.minecraft.version
    // }
 
     // copy everything else, thats not the mcmod.info
-  //  from(sourceSets.main.resources.srcDirs) {
-      //  exclude 'mcmod.info'
-  //  }
+   // from(sourceSets.main.resources.srcDirs) {
+     //   exclude 'mcmod.info'
+   // }
 }
+def defaultEncoding = 'UTF-8'
+compileJava {
+    options.encoding = defaultEncoding
+}
+
 [compileJava, compileTestJava].each {
     it.options.encoding = 'UTF-8'
     it.options.compilerArgs += ['-source', '1.7', '-target', '1.7']
