動かなくなった

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-
 archivesBaseName = "messy mod"
 
 minecraft {
-    version = "1.7.10-10.13.4.1448-1.7.10"
+    version = "1.7.10-10.13.4.1558-1.7.10"
     runDir = "eclipse"
 }
 
@@ -44,22 +44,22 @@ dependencies {
 
 processResources
 {
-  // this will ensure that this task is redone when the versions change.
-    inputs.property "1.7.10_2.0", project.version
-    inputs.property "1.7.10", project.minecraft.version
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "version", project.version
+    inputs.property "mcversion", project.minecraft.version
 
     // replace stuff in mcmod.info, nothing else
-   // from(sourceSets.main.resources.srcDirs) {
-       // include 'mcmod.info'
+    from(sourceSets.main.resources.srcDirs) {
+        include 'mcmod.info'
 
         // replace version and mcversion
-     //   expand 'version':project.version, 'mcversion':project.minecraft.version
-   // }
+        expand 'version':project.version, 'mcversion':project.minecraft.version
+    }
 
     // copy everything else, thats not the mcmod.info
-   // from(sourceSets.main.resources.srcDirs) {
-     //   exclude 'mcmod.info'
-   // }
+    from(sourceSets.main.resources.srcDirs) {
+        exclude 'mcmod.info'
+    }
 }
 def defaultEncoding = 'UTF-8'
 compileJava {
